# inculto-e-belo

./: .gitignore  README.md  harness  harness.toml
.claude/: settings.json
.harness/: estado-da-sessao.md  microdecisoes.md
.harness/decisoes/: _cabecalho.md
.reversa/: active-requirements.json  config.toml  plan.md  setup.json  state.json
.reversa/_config/: files-manifest.json  manifest.yaml
.reversa/context/: modules.json  surface.json
_reversa_forward/001-spike-de-flexoes/: actions.md  data-delta.md  investigation.md  legacy-impact.md  onboarding.md  progress.jsonl  regression-watch.md  requirements.md  roadmap.md  roteiro.md  spike-report.md
_reversa_forward/002-build-completo-de-producao/: actions.md  (+8 more)
_reversa_sdd/: architecture.md  c4-components.md  c4-containers.md  c4-context.md  code-analysis.md  confidence-report.md  data-dictionary.md  dependencies.md  domain.md  erd-complete.md  gaps.md  ideation.md  inventory.md  newproject-brief.md  permissions.md  personas.md  prd.md  questions.md  state-machines.md
pipeline/: README.md  manifesto-integridade.json  pyproject.toml
pipeline/src/aurelio_pipeline/: __init__.py  cli.py  erros.py
pipeline/src/aurelio_pipeline/dominio/: indice_flexoes.py  modelos.py  renderizacao.py
pipeline/src/aurelio_pipeline/infra/: escrita_stardict.py  repositorio.py
pipeline/src/aurelio_pipeline/validacao/: leitor_stardict.py  paridade.py
pipeline/tests/: conftest.py  test_indice_flexoes.py  test_renderizacao.py  test_repositorio.py  test_validacao.py
spike/001-flexoes/: README.md  gerar_spike.py  pyproject.toml
(+28 files in other folders)
