[project]
name = "aurelio-pipeline"
version = "1.0.0"
description = "Pipeline de produção do dicionário StarDict do Aurélio — feature 002-build-completo-de-producao"
requires-python = ">=3.12"
dependencies = [
    "pyglossary==5.4.1",
    "python-idzip==0.3.9",
]

[project.scripts]
aurelio-pipeline = "aurelio_pipeline.cli:main"

[dependency-groups]
dev = [
    "pytest==8.4.1",
    "coverage==7.9.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/aurelio_pipeline"]
