[project]
name = "spike-001-flexoes"
version = "0.1.0"
description = "Spike descartável: valida lookup de flexões (.syn em escala real) no KOReader — feature 001-spike-de-flexoes"
requires-python = ">=3.12"
dependencies = [
    "pyglossary==5.4.1",
    "python-idzip==0.3.9",
]

[tool.uv]
package = false
